--- a/report/report.tex
+++ b/report/report.tex
@@ -110,54 +110,62 @@ In dyadic conversations, there are only two roles a participant can take: speake
 
 Data collection was performed in-house, by the team. We first collected all available recordings of Who Wants to Be a Millionaire with two participants. Using the YouTube API, we managed to get the transcripts for the vast majority of recordings. To annotate these transcripts, we came up with the following unified set of annotations that would allow us to capture as much information as possible, without saturating the data.
 \begin{itemize}
-\item question - The system presents the question
-\item options - The system presents the options
-\item chit-chat - Speech not related to the quiz
-\item offer-answer() - A player presents an answer to the other player
-\item offer-to-answer - A  player signals that he/she knows the answer
-\item check-answer - A player checking if the other player knows the answer
-\item agreement - Agreement between players about the answer
-\item ask-agreement - A player asks the other player for confirmation about their answer
-\item accept-answer System considers answer the final answer
-\item final-answer() - Players give final answer
-\item confirm-agreement - System tries to confirm the final answer with participants
-\item confirm-final-answer - Participants confirm their answer is final
+  \item question - The system presents the question
+  \item options - The system presents the options
+  \item chit-chat - Speech not related to the quiz
+  \item offer-answer() - A player presents an answer to the other player
+  \item offer-to-answer - A  player signals that he/she knows the answer
+  \item check-answer - A player checking if the other player knows the answer
+  \item agreement - Agreement between players about the answer
+  \item ask-agreement - A player asks the other player for confirmation about their answer
+  \item accept-answer System considers answer the final answer
+  \item final-answer() - Players give final answer
+  \item confirm-agreement - System tries to confirm the final answer with participants
+  \item confirm-final-answer - Participants confirm their answer is final
 \end{itemize}
 
 \subsection{Cohen's Kappa Coefficient}
-\subsubsection{Calculation}
 As the system uses the annotations to train the system, ensuring that they are reliable and consistent is essential for accurate training. Cohen's kappa was used on a sample of the completed transcripts to evaluate their accuracy. Cohen's kappa measures the reliability between raters on categorical data. It is said to be more accurate than calculating the agreement as it accounts for agreements happening by chance. \todo{add source}
 
 To calculate Cohen's kappa, a sample of four transcripts were re-annotated by a team member, without them seeing the original annotations to remove any possible bias. This amounts to approximately 15\% of the total transcripts.
 
 Every occurrence by both raters of each annotation label was gathered. An overall agreement rate was calculated using -
 
-\begin{equation} \label{eq:likelihood_function}
+\begin{equation} \label{eq:kappa}
   \begin{split}
-    Agreement & = \frac{total Agreed}{total} \\
-    Agreement & = \frac{329}{341} \\
+    Agreement & = \frac{total \: Agreed}{total} \\
+    % Agreement & = \frac{329}{341} \\
     Agreement & = 0.9684
   \end{split}
 \end{equation}
 
-$Agreement = totalAgreed / total$
-$Agreement = 329/341 = 0.9648$
+This alone is not reliable enough to trust.\todo{source} To calculate the chance of an agreement happening between the two raters, first the probability of a rater choosing a label was calculated. This was done for each rater for every label using -
 
-This alone is not reliable enough to trust.
-To calculate the chance of an agreement happening between the two raters, first the probability of a rater choosing a label was calculated. This was done for each rater for every label using -
-
-$Prob(Rx[label]) = Rx Total for [label] / total$
+\begin{equation}
+  Prob(R_x[label]) = \frac{R_x \: Total \: for \: [label]}{total}
+\end{equation}
 
 Then the chance of agreement for each annotation label was calculated using -
-$ChanceAgreement[label] = Prob(R1[label]) * Prob(R2[label])$
+
+\begin{equation}
+  \begin{split}
+    &ChanceAgreement[label] = \\
+    &Prob(R_1[label]) * Prob(R_2[label])
+  \end{split}
+\end{equation}
 
 The overall chance of agreement was calculated by summing the chance of agreements for each annotation label.
 
 Finally, the kappa score was calculated.
-$KappaScore = (Agree-ChanceAgree)/(1-ChanceAgree)$
-$KappaScore = (0.9648-0.1175)/(1-0.1175) = 0.9601$
-\subsubsection{Analysis}
-According to Cohen, a Kappa score of 0.9601 is interpreted as almost perfect agreement. From this, the annotation of transcripts can be concluded as reliable and therefore the training model will accurately learn from this data.
+
+\begin{equation}
+  \begin{split}
+    KappaScore & = \frac{Agree - ChanceAgree}{1 - ChanceAgree} \\
+    KappaScore & = 0.9601
+  \end{split}
+\end{equation}
+
+According to Cohen \todo{add source}, a Kappa score of 0.9601 is interpreted as almost perfect agreement. From this, the annotation of transcripts can be concluded as reliable and therefore the training model will accurately learn from this data.
 
 \section{Design and Implementation}
 \label{sec:implementation}
@@ -230,11 +238,11 @@ The experiment followed a between-subjects design. Every participant was require
 \label{subsec:results}
 
 \begin{itemize}
-\item ASR results
-\item NLU result
-\item DM result
-\NLG result
-\item questionnaire result
+  \item ASR results
+  \item NLU result
+  \item DM result
+        NLG result
+  \item questionnaire result
 \end{itemize}
 
 \section{Conclusion}
