--- a/report/report.tex
+++ b/report/report.tex
@@ -16,6 +16,9 @@
 %% and that of ACL 08 by Joakim Nivre and Noah Smith
 
 \documentclass[hidelinks, 11pt]{article}
+% for table colouring 
+% \usepackage[table]{xcolor}
+\usepackage[table]{xcolor}
 \usepackage{acl2016}
 \usepackage{times}
 \usepackage{url}
@@ -23,7 +26,7 @@
 
 % For referencing sections across the article
 \usepackage{nameref}
-\usepackage[]{hyperref}
+\usepackage{hyperref}
 
 % for todo notes 
 \usepackage{todonotes}
@@ -43,6 +46,8 @@
 % in the camera-ready version and ask you to change it back.
 
 \newcommand\BibTeX{B{\sc ib}\TeX}
+% To add some line spacing in the table
+\renewcommand{\arraystretch}{1.3}
 
 \title{Instructions for ACL-2016 Proceedings}
 
@@ -104,25 +109,43 @@ In dyadic conversations, there are only two roles a participant can take: speake
 
 \begin{itemize}
   \item (Laura) Talk about multi-party data collection
-  \item (Aron and Katie) How we collected our data, describe the intents we used to label the data
-  \item (Aron and Katie) Cohen's Kappa for our data collection method: probably need to annotate a couple of transcripts twice for reporting on this
 \end{itemize}
 
-Data collection was performed in-house, by the team. We first collected all available recordings of Who Wants to Be a Millionaire with two participants. Using the YouTube API, we managed to get the transcripts for the vast majority of recordings. To annotate these transcripts, we came up with the following unified set of annotations that would allow us to capture as much information as possible, without saturating the data.
-\begin{itemize}
-  \item question - The system presents the question
-  \item options - The system presents the options
-  \item chit-chat - Speech not related to the quiz
-  \item offer-answer() - A player presents an answer to the other player
-  \item offer-to-answer - A  player signals that he/she knows the answer
-  \item check-answer - A player checking if the other player knows the answer
-  \item agreement - Agreement between players about the answer
-  \item ask-agreement - A player asks the other player for confirmation about their answer
-  \item accept-answer System considers answer the final answer
-  \item final-answer() - Players give final answer
-  \item confirm-agreement - System tries to confirm the final answer with participants
-  \item confirm-final-answer - Participants confirm their answer is final
-\end{itemize}
+Data collection was performed in-house, by the team. We first collected all available recordings of Who Wants to Be a Millionaire with two participants. Using the YouTube API, we downloaded transcripts for the vast majority of recordings. To annotate these transcripts, we used the following unified set of annotations that would allow us to capture as much information as possible, without saturating the data. \\
+
+\noindent
+\begin{table}
+  \begin{tabular}{ | p{2.5cm} | p{5cm} | }
+    \hline
+    \rowcolor{lightgray}
+    Intent               & Description                                                              \\
+    \hline
+    question             & The system presents the question                                         \\
+    \hline
+    options              & The system presents the options                                          \\
+    \hline
+    chit-chat            & Speech not related to the quiz                                           \\
+    \hline
+    offer-answer()       & A player presents an answer to the other player                          \\
+    \hline
+    offer-to-answer      & A  player signals that they know the answer                              \\
+    \hline
+    agreement            & Agreement between players about the answer                               \\
+    \hline
+    ask-agreement        & A player asks the other player for confirmation on their proposed answer \\
+    \hline
+    accept-answer        & System considers answer the final answer                                 \\
+    \hline
+    final-answer()       & Players give final answer                                                \\
+    \hline
+    confirm-agreement    & The system tries to confirm the final answer with participants           \\
+    \hline
+    confirm-final-answer & Participants confirm their answer is final                               \\
+    \hline
+  \end{tabular}
+  \caption{Intents used for Data Annotation}
+  \label{table:intents}
+\end{table}
 
 \subsection{Cohen's Kappa Coefficient}
 As the system uses the annotations to train the system, ensuring that they are reliable and consistent is essential for accurate training. Cohen's kappa was used on a sample of the completed transcripts to evaluate their accuracy. Cohen's kappa measures the reliability between raters on categorical data. It is said to be more accurate than calculating the agreement as it accounts for agreements happening by chance. \todo{add source}
@@ -135,7 +158,7 @@ Every occurrence by both raters of each annotation label was gathered. An overal
   \begin{split}
     Agreement & = \frac{total \: Agreed}{total} \\
     % Agreement & = \frac{329}{341} \\
-    Agreement & = 0.9684
+    Agreement & = \underline{\underline{0.9684}}
   \end{split}
 \end{equation}
 
@@ -161,7 +184,7 @@ Finally, the kappa score was calculated.
 \begin{equation}
   \begin{split}
     KappaScore & = \frac{Agree - ChanceAgree}{1 - ChanceAgree} \\
-    KappaScore & = 0.9601
+    KappaScore & = \underline{\underline{0.9601}}
   \end{split}
 \end{equation}
 
