--- a/report/references.bib
+++ b/report/references.bib
@@ -196,3 +196,17 @@
   pages        = {3492-3503}
 }
 
+@article{Cohen_1960,
+  title     = {A Coefficient of Agreement for Nominal Scales},
+  volume    = {20},
+  issn      = {0013-1644},
+  doi       = {10.1177/001316446002000104},
+  number    = {1},
+  journal   = {Educational and Psychological Measurement},
+  publisher = {SAGE Publications Inc},
+  author    = {Cohen, Jacob},
+  year      = {1960},
+  month     = {Apr},
+  pages     = {37–46},
+  language  = {en}
+}
