added cohen references

--- a/report/references.bib
+++ b/report/references.bib
@@ -210,3 +210,20 @@
   pages     = {37–46},
   language  = {en}
 }
+
+@article{McHugh_2012,
+  title     = {Interrater Reliability: the Kappa Statistic},
+  url       = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3900052/#:~:text=Cohen%20suggested%20the%20Kappa%20result,1.00%20as%20almost%20perfect%20agreement.},
+  year      = {2012},
+  author    = {McHugh, Mary L.}
+  }
+  
+  @article{Sun_2011,
+  title     = {Meta-analysis of Cohen’s kappa},
+  url       = {https://link.springer.com/content/pdf/10.1007/s10742-011-0077-3.pdf},
+  year      = {2011},
+  author    = {Sun, Shuyan},
+  doi       = {10.1007/s10742-011-0077-3}
+  }
+  
+  
