--- a/report/report.tex
+++ b/report/report.tex
@@ -210,10 +210,58 @@ To enable interaction between users and the conversational system, the first ste
 Our conversational system required two non-standard aspects from the ASR: (1) real-time transcription and (2) diarization. As our system conceptualised for usage on a robot, it must transcribe what the user is saying in real-time to avoid response delays. Time taken for a system to respond can only be marginally longer than the delay a human would leave before responding \todo{source!}.
 
 Diarization is the process of determining the speaker in multi-party conversations. Therefore, to handle a ``Who wants to be millionaire?'' style game, our system must be able to diarise. This allows us to track the intents of each individual user and determine when users agree or disagree.
-We tried several STT systems including Amazon's Transcribe, IBM's Watson and locally running Pyannote. Our findings were that these are all valid options for transcription but lack real-time diarization. We settled with Google's Cloud Speech-to-Text API due to its high accuracy, real-time transcription capabilities, and customisability. As it is widely used, troubleshooting and integration resources were readily available. In addition, Google's API promised diarization capabilities, and along with its real-time transcription capabilities seemed to fit our use case. However, in use, diarization was inaccurate, and it often grouped two separate speakers together or split sentences up seemingly at random. This became even more apparent when two users were speaking over each other, supporting the findings of \cite{addlesee_comprehensive_2020}. Diarization is quite resource-heavy meaning that running a diarization algorithm in real time takes an extreme amount of resources and, unfortunately, is not feasible on normal, consumer-grade hardware. And although diarization APIs exist, they do not respond fast enough for our use case. This made Google's diarization unusable for our system, therefore we decided to handle the diarization separately and integrate it with the real time Google transcription.
+We tried several STT systems including Amazon's Transcribe, IBM's Watson and locally running Pyannote. Our findings were that these are all valid options for transcription but lack real-time diarization. We settled with Google's Cloud Speech-to-Text API due to its high accuracy, real-time transcription capabilities, and customisability. As it is widely used, troubleshooting and integration resources were readily available. In addition, Google's API promised diarization capabilities, and along with its real-time transcription capabilities seemed to fit our use case. However, in use, diarization was inaccurate, and it often grouped two separate speakers together or split sentences up seemingly at random. This became even more apparent when two users were speaking over each other, supporting the findings of \cite{addlesee_comprehensive_2020}. As this made Google's diarization unusable for our system, therefore we decided to handle the diarization separately and integrate it with the real time Google transcription.
 
 \subsection{Natural Language Understanding}
 \label{subsec:nlu}
+
+Natural Language Understanding (NLU) is the first contact point between a user and conversational AI system. NLU uses many different methods to take in sentences or phrases of natural human language and try and classify them into intents that a computer can use. We use Rasa NLU which uses machine learning to train on our collected data to create a model that can accurately recoginize new, unseen inputs from users similar to the training examples. The NLU model will take the phrases from the ASR and label them with what it thinks the intention of that phrase is and passes that on to the DM.
+
+\begin{quote}
+  Rasa Open Source is the most popular open source framework for building chat and voice-based AI assistants. Rasa Open Source is an open source conversational AI platform that allows you to understand and hold conversations, and connect to messaging channels and third party systems through a set of APIs. It supplies the building blocks for creating virtual (digital) assistants or chatbots.
+\end{quote}
+
+We are not using all that Rasa has to offer but only Rasa NLU. Rasa NLU only produces a NLU model that can translate human language into intents or labels without the rest of the conversational system like DM and NLG. It takes training data in the form of each intent required with examples of natural language that would be classified under that intent. The model is also capable of entity extraction where it can recognize and label words of interest, like the answer to the question in our case.
+
+The intents NLU is trying to detect and label were described in the \cref{sec:data_collection} section above. Data collection provided hundreds of examples of each intent, which was then cleaned by the NLU team and put in as training data for Rasa NLU.
+
+\subsection{Evaluation of NLU}
+\label{subsec:NLU_evaluation}
+
+The NLU model has gone through multiple iterations, starting with very few training examples and being highly innacurate to a large amount of clean data producing a highly accurate and reliable model. Two models and their evaluations:
+
+\paragraph{Original} The original model is the first model trained on only 4 or 5 annotated transcripts, very little training data.
+This model was highly innacurate, constantly mislabeling intents, and extracting wrong answers or no answer at all.
+The Rasa training model used was not very efficient with a small amount of training data so this was expected.
+
+\begin{figure}
+  \includegraphics[width=\columnwidth]{../Rasa/Evaluation/Original_Model/DIETClassifier_confusion_matrix.png}
+\end{figure}
+
+The diagram above shows the entity extraction confusion matrix, where you can see that more than half of the phrases with answers werent extracted.
+It did well with phrases without entities and rarely mislabed entities that werent actually answers, but its general tendency to not extract an entity was poor.
+
+\begin{figure}
+  \includegraphics[width=\columnwidth]{../Rasa/Evaluation/Original_Model/intent_confusion_matrix.png}
+\end{figure}
+
+This diagram shows the confusion matrix for the intents.
+It shows a random scatter over the matrix meaning that the predicted labels and real labels often did not match up.
+The model in general was quite random and inconsistent to say the least.
+
+\paragraph{Used Model} The latest/best model, and the one actually used in our chatbot, was trained on around 25 transcripts with hundreds of training examples for each intent. Furthermore, we went through all the training data and manually cleaned it of any examples that were misplaced or extracted from the transcripts wrong. The added amount of data and the cleaning proved to do wonders as the performance of the model was much more reliable and accurate.
+
+\begin{figure}
+  \includegraphics[width=\columnwidth]{../Rasa/Evaluation/Clean_Model/DIETClassifier_confusion_matrix.png}
+\end{figure}
+
+As can be seen above, the confusion matrix is perfect as the model did not make any mistakes with entity extraction. Of course the model can't be perfect and this is only its performance on our test data, but still a crystal clear difference from the original model.
+
+\begin{figure}
+  \includegraphics[width=\columnwidth]{../Rasa/Evaluation/Clean_Model/intent_confusion_matrix.png}
+\end{figure}
+
+This diagram again shows the intents and how much more accurate this model is compared to the original. It only has a few mistakes here and there, especially with the more ambiguous intents, but even us as humans confuse those intents often. Regardless, the model is leaps more accurate than its beginning.
 
 \begin{itemize}
   \item Short description of RASA
@@ -221,12 +269,6 @@ We tried several STT systems including Amazon's Transcribe, IBM's Watson and loc
   \item Refer to the intents described in \ref{sec:data_collection} \cref{sec:data_collection}
   \item Evaluation - show different versions of the model: difference in F-Score, Confusion Matrix, ...
 \end{itemize}
-
-\begin{figure}
-  \includegraphics[width=\columnwidth]{../Rasa/Evaluation/Clean_Model/intent_confusion_matrix.png}
-  \caption{Intent Recognition Confusion Matrix}
-  \label{fig:intent_confusion_matrix}
-\end{figure}
 
 \subsection{Dialogue Management}
 \label{subsec:dialogue_management}
